# sam-3d-body

./: .gitattributes  .gitignore  INSTALL.md  README.md  VERSIONING.md  pyproject.toml
sam_3d_body/: __init__.py  sam_3d_body_estimator.py
sam_3d_body/data/transforms/: common.py
sam_3d_body/models/decoders/: prompt_encoder.py
sam_3d_body/models/heads/: camera_head.py
sam_3d_body/models/meta_arch/: sam3d_body.py
sam_3d_body/models/modules/: camera_embed.py
sam_3d_body/tools/: build_detector.py  build_fov_estimator.py  build_sam.py  vis_utils.py
tools/: build_detector.py  build_fov_estimator.py  build_sam.py
