[project]
name = "sam-3d-body"
dynamic = ["version"]
description = "SAM 3D Body - 3D human body estimation from images"
authors = [
    {name = "zagnouneotmane", email = "zagnoune.otmane@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "SAM License"} 
keywords = ["computer-vision", "3d-reconstruction", "human-body", "sam", "deep-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
urls = {
    "Homepage" = "https://github.com/zagnouneotmane/sam-3d-body",
    "Repository" = "https://github.com/zagnouneotmane/sam-3d-body",
    "Documentation" = "https://github.com/zagnouneotmane/sam-3d-body#readme",
}
dependencies = [
    "braceexpand==0.1.7",
    "einops==0.8.1",
    "fvcore>=0.1.5,<0.1.6",
    "hydra-core==1.3.2",
    "iopath>=0.1.7",
    "networkx==3.2.1",
    "numpy==1.26.4",
    "matplotlib==3.10.0",
    "cloudpickle==2.2.1",
    "utils3d @ git+https://github.com/EasternJournalist/utils3d.git@3fab839f0be9931dac7c8488eb0e1600c236e183",
    "omegaconf==2.2.3",
    "Pillow==11.0.0",
    "opencv-python-headless==4.5.5.64",
    "pycocotools>=2.0.2",
    "pytorch-lightning==2.6.0",
    "pyrender==0.1.45",
    "roma==1.5.4",
    "scikit-learn==1.6.1",
    "tabulate==0.9.0",
    "tensorboard==2.20.0",
    "termcolor>=1.1",
    "timm==0.9.7",
    "torch==2.5.1",
    "trimesh==4.5.2",
    "yacs==0.1.8",
]


[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=7.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sam_3d_body"]

[tool.setuptools.package-data]
"sam_3d_body" = ["**/*.yaml", "**/*.yml", "**/*.json", "**/*.pt", "**/*.ckpt"]

[tool.setuptools_scm]
write_to = "sam_3d_body/_version.py"
fallback_version = "0.1.0"
